@@ -24,6 +24,9 @@
 ;; along with this program; if not, write to the Free Software
 ;; Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
+(eval-when-compile
+  (require 'rails-scripts))
+
 (defvar rails-rake:tests-running-history (list))
 
 (defvar rails-rake:tasks-regexp "^rake \\([^ ]*\\).*# \\(.*\\)"
